GPencil Fill tool is broken on all builds after April 07 #106773

Closed
opened 2023-04-10 20:16:38 +02:00 by antonheg · 4 comments

System Information
Operating system: macOS Monterey 12.6.2
Graphics card: Intel HD Graphics 530 / Radeon Pro 450

Blender Version
Broken: Blender 3.6.0 - Alpha Intel (starting from April 08, 02:12:35
e369bf4a6d)
Worked: Blender 3.6.0 - Alpha Intel 2023-04-07 (
Friday 7 April 2023 at 01:57)

Short description of error
"Unable to fill unclosed area" even on the tightest closed area

Exact steps for others to reproduce the error
On a vanilla installation and Metal backend (no addons):

  1. New 2D Animation
  2. Draw any very tightly closed area with the pencil or ink pen tools with a solid stroke
  3. Try filling it with a solid fill gives you the "Unable to fill unclosed area" error message

Thank you for the great upcoming release

**System Information** Operating system: macOS Monterey 12.6.2 Graphics card: Intel HD Graphics 530 / Radeon Pro 450 **Blender Version** Broken: Blender 3.6.0 - Alpha Intel (starting from April 08, 02:12:35 e369bf4a6d38) Worked: Blender 3.6.0 - Alpha Intel 2023-04-07 ( Friday 7 April 2023 at 01:57) **Short description of error** "Unable to fill unclosed area" even on the tightest closed area **Exact steps for others to reproduce the error** On a vanilla installation and Metal backend (no addons): 1. New 2D Animation 2. Draw any very tightly closed area with the pencil or ink pen tools with a solid stroke 3. Try filling it with a solid fill gives you the "Unable to fill unclosed area" error message Thank you for the great upcoming release
antonheg added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-04-10 20:16:38 +02:00
Member

Tested on a Linux machine with nVidia hardware, couldn't reproduce the issue.

图片

Because GPencil fill uses pixels to determine continuity, this could be very much be a Metal problem. Since that error only shows when you have a very wide non-enclosed region, or you just click on the blank portion of the viewport, I think the problem is very likely caused by wrong offset during pixel read-out, like this one.

I think you could try clicking at positions that are next to your shapes, and try to see if it actually fills by chance, if it does then that's very likely the cause.

On gpencil_render_offscreen(), cc @ideasman42 @antoniov

Tested on a Linux machine with nVidia hardware, couldn't reproduce the issue. ![图片](/attachments/93db6561-841e-4779-b11f-c5a4d2994760) Because GPencil fill uses pixels to determine continuity, this could be very much be a Metal problem. Since that error only shows when you have a very wide non-enclosed region, or you just click on the blank portion of the viewport, I think the problem is very likely caused by wrong offset during pixel read-out, like [this one](https://projects.blender.org/blender/blender/issues/106103#issuecomment-915540). I think you could try clicking at positions that are next to your shapes, and try to see if it actually fills by chance, if it does then that's very likely the cause. On `gpencil_render_offscreen()`, cc @ideasman42 @antoniov
124 KiB
YimingWu added the
Interest
Grease Pencil
Interest
Metal
labels 2023-04-11 06:01:38 +02:00
Author

@ChengduLittleA thank you for your response but I can't get it to work even when clicking with a slight offset position.

What's frustrating is that this was working perfectly with the Metal backend until Blender 3.6.0 - Alpha Intel 2023-04-07.

So a commit between Friday 7 April, 02:10:38 (3681ed377b) and Saturday April 08, 02:12:35 (e369bf4a6d) broke it. I do hope it won't be too hard to find with such a small time window.

Edit: There's only one commit related to Metal over that period (Fix #106103: Resolve texture paint selection in Metal 75c0e808b8).

@ChengduLittleA thank you for your response but I can't get it to work even when clicking with a slight offset position. What's frustrating is that this was working perfectly with the Metal backend until Blender 3.6.0 - Alpha Intel 2023-04-07. So a commit between Friday 7 April, 02:10:38 (3681ed377be6) and Saturday April 08, 02:12:35 (e369bf4a6d) broke it. I do hope it won't be too hard to find with such a small time window. Edit: There's only one commit related to Metal over that period (Fix #106103: Resolve texture paint selection in Metal https://projects.blender.org/blender/blender/commit/75c0e808b842504a8965fbb24c72c012579bb3c3).
Member

@Jeroen-Bakker , @Jason-Fielder : could you check?

@Jeroen-Bakker , @Jason-Fielder : could you check?

Can take a look, but if this was recently introduced, looks like its the result of the viewport region logic being modified to resolve the texture paint selection bug.

I'll see what needs revising to bring this back into correct functionality.

Can take a look, but if this was recently introduced, looks like its the result of the viewport region logic being modified to resolve the texture paint selection bug. I'll see what needs revising to bring this back into correct functionality.
Jason Fielder added
Priority
High
and removed
Priority
Normal
labels 2023-04-11 16:29:28 +02:00
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-12 08:05:13 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-13 08:23:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106773
No description provided.