source/blender/gpu/metal/mtl_context.mm
@@ -949,20 +949,23 @@ bool MTLContext::ensure_render_pipeline_state(MTLPrimitiveType mtl_prim_type)
 
         /* Some scissor assignments exceed the bounds of the viewport due to implicitly added
          * padding to the width/height - Clamp width/height. */
-        BLI_assert(scissor.x >= 0 && scissor.x < render_fb->get_width());
-        BLI_assert(scissor.y >= 0 && scissor.y < render_fb->get_height());
-        scissor.width = min_ii(scissor.width, render_fb->get_width() - scissor.x);
-        scissor.height = min_ii(scissor.height, render_fb->get_height() - scissor.y);
-        BLI_assert(scissor.width > 0 && (scissor.x + scissor.width <= render_fb->get_width()));
-        BLI_assert(scissor.height > 0 && (scissor.height <= render_fb->get_height()));
+        BLI_assert(scissor.x >= 0 && scissor.x < render_fb->get_default_width());
+        BLI_assert(scissor.y >= 0 && scissor.y < render_fb->get_default_height());
+        scissor.width = (uint)min_ii(scissor.width,
+                                     max_ii(render_fb->get_default_width() - (int)(scissor.x), 0));
+        scissor.height = (uint)min_ii(
+            scissor.height, max_ii(render_fb->get_default_height() - (int)(scissor.y), 0));
+        BLI_assert(scissor.width > 0 &&
+                   (scissor.x + scissor.width <= render_fb->get_default_width()));
+        BLI_assert(scissor.height > 0 && (scissor.height <= render_fb->get_default_height()));
       }
       else {
         /* Scissor is disabled, reset to default size as scissor state may have been previously
          * assigned on this encoder. */
         scissor.x = 0;
         scissor.y = 0;
-        scissor.width = render_fb->get_width();
-        scissor.height = render_fb->get_height();
+        scissor.width = render_fb->get_default_width();
+        scissor.height = render_fb->get_default_height();
       }
 
       /* Scissor state can still be flagged as changed if it is toggled on and off, without
